--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'maven-publish'
 // We compile using Java 7.
 sourceCompatibility = 1.7
 
-version = '0.67'
+version = '1.0-SNAPSHOT'
 group = 'org.ggp.base'
 /*
  * For now, instead of using an online library repository (e.g. Maven), we keep
@@ -217,7 +217,7 @@ publishing {
 
 artifacts {
     archives jar
-    archives javadocJar
+    //archives javadocJar
     archives sourcesJar
 }
 //uploadArchives {
